--- a/projectWithDjango/django_app/templates/django_app/all_app.html
+++ b/projectWithDjango/django_app/templates/django_app/all_app.html
@@ -7,7 +7,7 @@ App Page
 
 {% block content %}
 
-    <h1>Khushi Sharma / all_app page</h1>
+    <h1>Khushi Sharma / Fruit Store</h1>
 
     <div class='grid grid-cols-4 gap-4 m-4'>
 
